--- a/rebar.config
+++ b/rebar.config
@@ -5,6 +5,6 @@
     ]}.
 
 {deps, [
-    {sqlite, ".*", {git,"https://github.com/alexeyr/erlang-sqlite3.git", 
+    {sqlite3, ".*", {git,"https://github.com/alexeyr/erlang-sqlite3.git", 
                         "HEAD"}}
 ]}.
