--- a/rebar.config
+++ b/rebar.config
@@ -6,5 +6,7 @@
 
 {deps, [
     {sqlite3, ".*", {git,"https://github.com/alexeyr/erlang-sqlite3.git", 
+                        "HEAD"}},
+ {mochiweb, ".*", {git,"http://github.com/mochi/mochiweb.git", 
                         "HEAD"}}
 ]}.
