some progres towards getting grid json to work

--- a/rebar.config
+++ b/rebar.config
@@ -8,5 +8,7 @@
     {sqlite3, ".*", {git,"https://github.com/alexeyr/erlang-sqlite3.git", 
                         "HEAD"}},
  {mochiweb, ".*", {git,"http://github.com/mochi/mochiweb.git", 
+                        "HEAD"}},
+ {rfc4627_jsonrpc, ".*", {git,"https://github.com/tonyg/erlang-rfc4627.git", 
                         "HEAD"}}
 ]}.
